--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -248,6 +248,12 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Default\Index.cshtml" />
+    <Content Include="Views\Default\Experience.cshtml" />
+    <Content Include="Views\Default\Education.cshtml" />
+    <Content Include="Views\Default\Talent.cshtml" />
+    <Content Include="Views\Default\Hobby.cshtml" />
+    <Content Include="Views\Default\Certificates.cshtml" />
+    <Content Include="Views\Default\Contact.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
