--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -176,6 +176,14 @@
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\AboutRepository.cs" />
+    <Compile Include="Repositories\AwardRepository.cs" />
+    <Compile Include="Repositories\ContactRepository.cs" />
+    <Compile Include="Repositories\EducationRepository.cs" />
+    <Compile Include="Repositories\ExperienceRepository.cs" />
+    <Compile Include="Repositories\GenericRepository.cs" />
+    <Compile Include="Repositories\HobbyRepository.cs" />
+    <Compile Include="Repositories\TalentRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="webadmin\.gitignore" />
