--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -132,6 +132,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AboutController.cs" />
     <Compile Include="Controllers\DefaultController.cs" />
+    <Compile Include="Controllers\EducationController.cs" />
     <Compile Include="Controllers\ExperienceController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TalentController.cs" />
@@ -2363,6 +2364,8 @@
     <Content Include="Views\Talent\Index.cshtml" />
     <Content Include="Views\Talent\AddTalent.cshtml" />
     <Content Include="Views\Talent\Edit.cshtml" />
+    <Content Include="Views\Education\Index.cshtml" />
+    <Content Include="Views\Education\AddEducation.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
