--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -2369,6 +2369,8 @@
     <Content Include="Views\Education\AddEducation.cshtml" />
     <Content Include="Views\Education\Edit.cshtml" />
     <Content Include="Views\Certificate\Index.cshtml" />
+    <Content Include="Views\Certificate\Edit.cshtml" />
+    <Content Include="Views\Certificate\AddCertificate.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
