--- a/MvcCv/MvcCv.csproj
+++ b/MvcCv/MvcCv.csproj
@@ -2378,6 +2378,7 @@
     <Content Include="Views\Certificate\AddCertificate.cshtml" />
     <Content Include="Views\Contact\Index.cshtml" />
     <Content Include="Views\Hobby\Index.cshtml" />
+    <Content Include="Views\Default\SocialMedia.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
